crates/ir/tests/snapshots/lower_test__stdlib__intrinsic_panic_codegen.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__intrinsic_panic_codegen

extern java "krypton.runtime.KryptonIO" println(u8): Unit
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[s8]): List[s8]
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare panic
declare println: (u8) -> Unit

fn main() -> Unit =
  let_join v3(v0: Int) =
    let v2: Unit = call println(v0)
    v2
  in
  if true {
    jump v3(42)
  } else {
    let v1: Int = call panic("oops")
    jump v3(v1)
  }
