crates/ir/tests/snapshots/lower_test__stdlib__list_literal_basic.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module stdlib__list_literal_basic

import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[s8]): List[s8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
fn main() -> Int =
  let v0: ~List[Int] = construct List::Nil#1()
  let v1: ~List[Int] = construct List::Cons#0(3, v0)
  let v2: ~List[Int] = construct List::Cons#0(2, v1)
  let v3: ~List[Int] = construct List::Cons#0(1, v2)
  switch v3 {
    0 (v4: Int, v5: List[h]) ->
      v4
    1 ->
      0
  }
